--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Quote Generator</title>
 </head>
 <body>
+
+    <aside class="side-btns-section">
+        <ul class="side-btns">
+            <li><a href="mailto:developer@bykivi.com" target="blank" title="email"><i class="side-btns__item side-btns__item--1 fas fa-envelope"></i></a></li>
+            <li><a href="http://bykivi.com" target="blank" title="Portfolio"><i class="side-btns__item side-btns__item--2 fas fa-link"></i></a></li>
+            <li><a href="https://github.com/KCode100/quotes-generator" target="blank" title="GitHub"><i class="side-btns__item side-btns__item--3 fab fa-github"></i></a></li>
+        </ul>
+    </aside>
+
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
